# task02---zoo-binya2

./: README.md
tasks_week3_binyamin_shouraki/: CMakeLists.txt
tasks_week3_binyamin_shouraki/include/: Animal.h  CMakeLists.txt  Dog.h  Lion.h  Location.h  Monkey.h  Zoo.h
tasks_week3_binyamin_shouraki/src/: CMakeLists.txt  Dog.cpp  Lion.cpp  Monkey.cpp  Zoo.cpp  tasks_week3_binyamin_shouraki.cpp
